--- a/css/style.css
+++ b/css/style.css
@@ -40,6 +40,7 @@ body {
     text-transform: uppercase;
     /* Fix shaking on animations */
     backface-visibility: hidden;
+    margin-bottom: 60px;
 }
 
 .heading-primary-main {
@@ -67,6 +68,7 @@ body {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+    text-align: center;
 }
 
 @keyframes moveInLeft {
@@ -95,4 +97,28 @@ body {
         opacity: 1;
         transform: translateX(0px);
     }
+}
+
+.btn:link, .btn:visited { 
+    text-transform: uppercase;
+    text-decoration: none;
+    padding: 15px 40px;
+    display: inline-block;
+    border-radius: 100px;
+    transition: all .3s;
+}
+
+.btn:hover {
+    transform: translateY(-5px);
+    box-shadow: 0 10px 20px rgba(0,0,0,.3);
+}
+
+.btn:active { 
+    transform: translateY(-1px);
+    box-shadow: 0 5px 20px rgba(0,0,0,.3);
+}
+
+.btn-white {
+    background-color: white;
+    color: #777;
 }
