--- a/css/style.css
+++ b/css/style.css
@@ -99,6 +99,17 @@ body {
     }
 }
 
+@keyframes moveInUp {
+    0% {
+        opacity: 0;
+        transform: translateY(300px);
+    }
+    100% {
+        opacity: 1;
+        transform: translateX(0px);
+    }
+}
+
 .btn:link, .btn:visited { 
     text-transform: uppercase;
     text-decoration: none;
@@ -106,6 +117,8 @@ body {
     display: inline-block;
     border-radius: 100px;
     transition: all .3s;
+    position: relative;
+   
 }
 
 .btn:hover {
@@ -121,4 +134,32 @@ body {
 .btn-white {
     background-color: white;
     color: #777;
+}
+
+.btn::after {
+    display: inline-block;
+    content: "";
+    height: 100%;
+    width: 100%;
+    border-radius: 100px;   
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: -1;
+    transition: all .3s;
+}
+
+.btn-white::after {
+    background-color: white;
+}
+
+.btn:hover::after {
+    transform: scaleX(1.4) scaleY(1.6);
+    opacity: 0;
+}
+
+.btn-animated-up { 
+    animation-name: moveInUp;
+    animation-timing-function: ease-out;
+    animation-duration: 1s;
 }
