--- a/css/style.css
+++ b/css/style.css
@@ -6,20 +6,22 @@ Medium green: #55c57a
 Dark green: #7ed56f
 
 */
+html {
+    font-size: 10px;
 
+}
 body {
     font-family: "Lato", sans-serif;
     font-weight: 400;
-    font-size: 16;
     line-height: 1.7;
     color: #777;
-    padding: 15px;
+    padding: 1.5.rem;
 }
 
 .header {
     position: relative;
     height: 95vh;
-    background-image: linear-gradient( to right bottom, rgba(126, 213, 111, 0.8), rgba(40, 180, 131, 0.8)), url("../img/hero.jpg");
+    background-image: linear-gradient( to right bottom, rgba(126, 213, 111, .8), rgba(40, 180, 131, .8)), url("../img/hero.jpg");
     background-size: cover;
     background-position: top;
     clip-path: polygon(0 0, 100% 0, 100% 80vh, 0 100%);
@@ -27,12 +29,12 @@ body {
 
 .logo-box {
     position: absolute;
-    top: 25px;
-    left: 25px;
+    top: 2.5rem;
+    left: 2.5rem;
 }
 
 .logo {
-    height: 35px;
+    height: 3.5rem;
 }
 
 .heading-primary {
@@ -40,14 +42,14 @@ body {
     text-transform: uppercase;
     /* Fix shaking on animations */
     backface-visibility: hidden;
-    margin-bottom: 60px;
+    margin-bottom: 6rem;
 }
 
 .heading-primary-main {
     display: block;
-    font-size: 60px;
+    font-size: 6rem;
     font-weight: 400;
-    letter-spacing: 35px;
+    letter-spacing: 3.5rem;
     animation-name: moveInLeft;
     animation-timing-function: ease-out;
     animation-duration: 1s;
@@ -55,9 +57,9 @@ body {
 
 .heading-primary-sub {
     display: block;
-    font-size: 20px;
+    font-size: 2rem;
     font-weight: 600;
-    letter-spacing: 17px;
+    letter-spacing: 1.7rem;
     animation-name: moveInRight;
     animation-timing-function: ease-out;
     animation-duration: 1s;
@@ -74,10 +76,10 @@ body {
 @keyframes moveInLeft {
     0% {
         opacity: 0;
-        transform: translateX(-100px);
+        transform: translateX(-10rem);
     }
     80% {
-        transform: translateX(10px);
+        transform: translateX(1rem);
     }
     100% {
         opacity: 1;
@@ -88,10 +90,10 @@ body {
 @keyframes moveInRight {
     0% {
         opacity: 0;
-        transform: translateX(100px);
+        transform: translateX(10rem);
     }
     80% {
-        transform: translateX(-10px);
+        transform: translateX(-1rem);
     }
     100% {
         opacity: 1;
@@ -102,28 +104,28 @@ body {
 @keyframes moveInUp {
     0% {
         opacity: 0;
-        transform: translateY(300px);
+        transform: translateY(10rem);
     }
     100% {
         opacity: 1;
-        transform: translateX(0px);
+        transform: translateX(0rem);
     }
 }
 
 .btn:link, .btn:visited { 
     text-transform: uppercase;
     text-decoration: none;
-    padding: 15px 40px;
+    padding: 1.5rem 4rem;
     display: inline-block;
-    border-radius: 100px;
+    border-radius: 10rem;
     transition: all .3s;
     position: relative;
    
 }
 
 .btn:hover {
-    transform: translateY(-5px);
-    box-shadow: 0 10px 20px rgba(0,0,0,.3);
+    transform: translateY(-5rem);
+    box-shadow: 0 1rem 2rem rgba(0,0,0,.3);
 }
 
 .btn:active { 
