--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,7 @@ Dark green: #7ed56f
 */
 html {
     /* Do make the website user-friendly to user with visual disabilities */
-    font-size: 65%;
+    font-size: 85%;
 }
 
 body {
@@ -29,13 +29,13 @@ body {
     clip-path: polygon(0 0, 100% 0, 100% 80vh, 0 100%);
 }
 
-.logo-box {
+.header__logo-box {
     position: absolute;
     top: 2.5rem;
     left: 2.5rem;
 }
 
-.logo {
+.header__logo {
     height: 3.5rem;
 }
 
@@ -47,7 +47,7 @@ body {
     margin-bottom: 6rem;
 }
 
-.heading-primary-main {
+.heading-primary--main {
     display: block;
     font-size: 6rem;
     font-weight: 400;
@@ -57,7 +57,7 @@ body {
     animation-duration: 1s;
 }
 
-.heading-primary-sub {
+.heading-primary--sub {
     display: block;
     font-size: 2rem;
     font-weight: 600;
@@ -67,7 +67,7 @@ body {
     animation-duration: 1s;
 }
 
-.text-box {
+.header__text-box {
     position: absolute;
     top: 50%;
     left: 50%;
@@ -126,7 +126,8 @@ body {
 }
 
 .btn:hover {
-    transform: translateY(-5rem);
+    transform: translateY(-1rem);
+    animation-duration: .5s;
     box-shadow: 0 1rem 2rem rgba(0,0,0,.3);
 }
 
@@ -135,7 +136,7 @@ body {
     box-shadow: 0 5px 20px rgba(0,0,0,.3);
 }
 
-.btn-white {
+.btn--white {
     background-color: white;
     color: #777;
 }
@@ -153,7 +154,7 @@ body {
     transition: all .3s;
 }
 
-.btn-white::after {
+.btn--white::after {
     background-color: white;
 }
 
@@ -162,7 +163,7 @@ body {
     opacity: 0;
 }
 
-.btn-animated-up { 
+.btn--animated { 
     animation-name: moveInUp;
     animation-timing-function: ease-out;
     animation-duration: 1s;
